# b32

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.md  README.qmd  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  lib.R
man/: encode.Rd
reference/: decode.html  encode.html  encode.md  index.html  index.md
src/: Makevars.in  Makevars.win.in  b32-win.def  entrypoint.c
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-sanity.R
